scrollbar styling, and task list fixes

--- a/src/app/components/task-list/task-list.component.css
+++ b/src/app/components/task-list/task-list.component.css
@@ -34,4 +34,38 @@
   flex-direction: column;
   height: 100%;
   padding: 5%  0;
+  max-height: 200px;
+  -webkit-overflow-scrolling: auto;
+  overflow: auto;
+  background:
+    linear-gradient(var(--color5) 30%, var(--color5)),
+    linear-gradient(rgba(255, 255, 255, 0), var(--color5) 0%) 0 100%,
+    radial-gradient(farthest-side at 50% 0, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)),
+    radial-gradient(farthest-side at 50% 100%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 0 100%;
+  background-repeat: no-repeat;
+  background-size: 100% 10px, 100% 10px, 100% 10px, 100% 10px;
+  background-attachment: local,local,scroll,scroll;
 }
+
+
+::-webkit-scrollbar {
+  width: 10px!important;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--color3);
+  border-radius: 5px;
+}
+
+@media (max-width: 450px) {
+  .wrapper {
+    max-height: 500px;
+  }
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
